	macro, mnemonics, firstmacro, define_macro, sp, stack, readlabel,
	rd_expr, compute_ref, check_label, rd_label, rd_value, rd_factor,
	rd_term, rd_expr_shift, rd_expr_unequal, rd_expr_equal, rd_expr_and,
	rd_expr_xor, rd_expr_or, new_reference, wrt_ref, read_line,
	get_macro_args, assemble): Added macro support.
	* z80asm.c (rd_value): Added several radix notations.

2005-05-17  Bas Wijnen  <shevek@fmf.nl>

	* Makefile (clean): Clean examples and headers.
	* Makefile (dist): Make versioned tarballs.
	* z80asm.c (buffer, try_use_real_file, flush_to_real_file,
	parse_commandline, assemble): Generalise writing to non-seekable
	files.
	* z80asm.c (reallistfile, parse_commandline, assemble): Use it for
	list file.
	* z80asm.c (read_line, assemble): Remove arbitrary line length limit.

2005-05-13  Bas Wijnen  <shevek@fmf.nl>

	* examples/Makefile, examples/hello.asm, headers/msx-bios.asm,
	headers/msx2-bios.asm, headers/msx2+-bios.asm,
	headers/msxturbor-bios.asm: New files.
	* z80asm.c (struct includedir, firstincludedir, open_include_file,
	add_include, parse_commandline, assemble, main): Use include path.
	* z80asm (parse_commandline): Make stderr default for list and label
	files.
	* z80asm.c (enum mnemonic, mnemonics, get_include_name, assemble): Add
	bininclude directive.
	* z80asm.c (printerr, assemble): Make error output parsable.
	* z80asm.1: Updated.

2005-05-11  Bas Wijnen  <shevek@fmf.nl>

	* Makefile (top level, dist): Use versions instead of dates.
	* VERSION: New file.
	* BUGS, NEWS, README: Removed.

2005-05-10  Bas Wijnen  <shevek@fmf.nl>

	* z80asm.1: New file.
	* z80asm.c (enum mnemonic, mnemonic, assemble): Support END directive.
	* z80asm.c (compare, indx, readlabel): Use strncasecmp instead of
	compare.
	* z80asm.c (assemble): Fix bug with strings in DEFB.
	* z80asm.c (assemble): Allow backslash-escapes in DEFB strings.
	* z80asm.c (rd_character): Allow octal escapes in strings.

2005-03-11  Bas Wijnen  <shevek@fmf.nl>
